[gd_scene load_steps=6 format=4 uid="uid://r04t35o2g5x4"]

[ext_resource type="Script" uid="uid://0jrtao5pcd6o" path="res://Menu/button.gd" id="1_2tlif"]
[ext_resource type="TileSet" uid="uid://vvhkbecwew3d" path="res://Scenes/Ground.tres" id="1_i47e5"]
[ext_resource type="TileSet" uid="uid://bpf6f6qouayim" path="res://Scenes/Foam.tres" id="2_qejlp"]
[ext_resource type="FontFile" uid="uid://dsk8q46vvnx7q" path="res://Kenneys/kenney_tiny-dungeon/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="4_rra67"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qejlp"]
size = Vector2(480, 128)

[node name="Button" type="Area2D"]
script = ExtResource("1_2tlif")

[node name="Foam" type="TileMapLayer" parent="."]
scale = Vector2(0.25, 0.25)
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAQABAAAAAgAAAAAAAQACAAAAAgAAAAAAAQADAAAAAgAAAAAAAQAEAAAAAgAAAAAAAQAFAAAAAgAAAAAAAQAGAAAAAgAAAAAAAQAHAAAAAgAAAAAAAQAIAAAAAgAAAAAAAQAJAAAAAgAAAAAAAQAKAAAAAgAAAAAAAQALAAAAAgAAAAAAAQAMAAAAAgAAAAAAAQANAAAAAgAAAAAAAQAOAAAAAgAAAAAAAQAPAAAAAgAAAAAAAQAQAAAAAgAAAAAAAQARAAAAAgAAAAAAAQASAAAAAgAAAAAAAQATAAAAAgAAAAAAAQAUAAAAAgAAAAAAAQAVAAAAAgAAAAAAAQAWAAAAAgAAAAAAAQAXAAAAAgAAAAAAAQAYAAAAAgAAAAAAAQAZAAAAAgAAAAAAAQAaAAAAAgAAAAAAAQAbAAAAAgAAAAAAAQAcAAAAAgAAAAAAAQAdAAAAAgAAAAAAAQAdAAEAAgAAAAAAAQAdAAIAAgAAAAAAAQAdAAMAAgAAAAAAAQAdAAQAAgAAAAAAAQAdAAUAAgAAAAAAAQAdAAYAAgAAAAAAAQAdAAcAAgAAAAAAAQAcAAcAAgAAAAAAAQAbAAcAAgAAAAAAAQAaAAcAAgAAAAAAAQAZAAcAAgAAAAAAAQAYAAcAAgAAAAAAAQAXAAcAAgAAAAAAAQAWAAcAAgAAAAAAAQAVAAcAAgAAAAAAAQAUAAcAAgAAAAAAAQATAAcAAgAAAAAAAQASAAcAAgAAAAAAAQARAAcAAgAAAAAAAQAQAAcAAgAAAAAAAQAPAAcAAgAAAAAAAQAOAAcAAgAAAAAAAQANAAcAAgAAAAAAAQAMAAcAAgAAAAAAAQALAAcAAgAAAAAAAQAKAAcAAgAAAAAAAQAJAAcAAgAAAAAAAQAIAAcAAgAAAAAAAQAHAAcAAgAAAAAAAQAGAAcAAgAAAAAAAQAFAAcAAgAAAAAAAQAEAAcAAgAAAAAAAQADAAcAAgAAAAAAAQACAAcAAgAAAAAAAQABAAcAAgAAAAAAAQAAAAcAAgAAAAAAAQAAAAYAAgAAAAAAAQAAAAUAAgAAAAAAAQAAAAQAAgAAAAAAAQAAAAMAAgAAAAAAAQAAAAIAAgAAAAAAAQAAAAEAAgAAAAAAAQA=")
tile_set = ExtResource("2_qejlp")

[node name="ButtonOff" type="TileMapLayer" parent="."]
scale = Vector2(0.25, 0.25)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAABAAAAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAANAAAAAAABAAAAAAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAABAAAAAAARAAAAAAABAAAAAAASAAAAAAABAAAAAAATAAAAAAABAAAAAAAUAAAAAAABAAAAAAAVAAAAAAABAAAAAAAWAAAAAAABAAAAAAAXAAAAAAABAAAAAAAYAAAAAAABAAAAAAAZAAAAAAABAAAAAAAaAAAAAAABAAAAAAAdAAAAAAACAAAAAAAcAAAAAAABAAAAAAAbAAAAAAABAAAAAAAdAAEAAAACAAEAAAAdAAIAAAACAAEAAAAdAAMAAAACAAEAAAAdAAQAAAACAAEAAAAdAAUAAAACAAEAAAAdAAYAAAACAAEAAAAdAAcAAAACAAIAAAAcAAcAAAABAAIAAAAbAAcAAAABAAIAAAAaAAcAAAABAAIAAAAZAAcAAAABAAIAAAAYAAcAAAABAAIAAAAXAAcAAAABAAIAAAAWAAcAAAABAAIAAAAVAAcAAAABAAIAAAAUAAcAAAABAAIAAAATAAcAAAABAAIAAAASAAcAAAABAAIAAAARAAcAAAABAAIAAAAQAAcAAAABAAIAAAAPAAcAAAABAAIAAAAOAAcAAAABAAIAAAANAAcAAAABAAIAAAAMAAcAAAABAAIAAAALAAcAAAABAAIAAAAKAAcAAAABAAIAAAAJAAcAAAABAAIAAAAIAAcAAAABAAIAAAAHAAcAAAABAAIAAAAGAAcAAAABAAIAAAAFAAcAAAABAAIAAAAEAAcAAAABAAIAAAADAAcAAAABAAIAAAACAAcAAAABAAIAAAABAAcAAAABAAIAAAAAAAcAAAAAAAIAAAAAAAYAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAEAAAAAAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAEAAAAKAAEAAAABAAEAAAALAAEAAAABAAEAAAAMAAEAAAABAAEAAAANAAEAAAABAAEAAAAOAAEAAAABAAEAAAAPAAEAAAABAAEAAAAQAAEAAAABAAEAAAARAAIAAAABAAEAAAASAAIAAAABAAEAAAATAAIAAAABAAEAAAAUAAIAAAABAAEAAAAVAAIAAAABAAEAAAAWAAIAAAABAAEAAAAXAAIAAAABAAEAAAAYAAIAAAABAAEAAAAZAAIAAAABAAEAAAAaAAIAAAABAAEAAAAbAAIAAAABAAEAAAAcAAIAAAABAAEAAAAcAAEAAAABAAEAAAAbAAEAAAABAAEAAAAaAAEAAAABAAEAAAAZAAEAAAABAAEAAAAYAAEAAAABAAEAAAAXAAEAAAABAAEAAAAWAAEAAAABAAEAAAAVAAEAAAABAAEAAAAUAAEAAAABAAEAAAATAAEAAAABAAEAAAASAAEAAAABAAEAAAARAAEAAAABAAEAAAAaAAMAAAABAAEAAAAbAAMAAAABAAEAAAAbAAQAAAABAAEAAAAcAAQAAAABAAEAAAAcAAUAAAABAAEAAAAcAAMAAAABAAEAAAAcAAYAAAABAAEAAAAbAAYAAAABAAEAAAAaAAYAAAABAAEAAAAZAAYAAAABAAEAAAAYAAYAAAABAAEAAAAXAAYAAAABAAEAAAAWAAYAAAABAAEAAAAVAAYAAAABAAEAAAAUAAYAAAABAAEAAAATAAYAAAABAAEAAAASAAYAAAABAAEAAAARAAYAAAABAAEAAAAQAAYAAAABAAEAAAAPAAYAAAABAAEAAAAOAAYAAAABAAEAAAANAAYAAAABAAEAAAAMAAYAAAABAAEAAAALAAYAAAABAAEAAAAKAAYAAAABAAEAAAAJAAYAAAABAAEAAAAIAAYAAAABAAEAAAAHAAYAAAABAAEAAAAGAAYAAAABAAEAAAAFAAYAAAABAAEAAAAEAAYAAAABAAEAAAADAAYAAAABAAEAAAACAAYAAAABAAEAAAABAAYAAAABAAEAAAABAAUAAAABAAEAAAABAAQAAAABAAEAAAABAAMAAAABAAEAAAABAAIAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAMAAAABAAEAAAACAAIAAAABAAEAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAAEAAMAAAABAAEAAAAEAAIAAAABAAEAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAGAAMAAAABAAEAAAAGAAIAAAABAAEAAAAHAAIAAAABAAEAAAAIAAIAAAABAAEAAAAJAAIAAAABAAEAAAAKAAIAAAABAAEAAAALAAIAAAABAAEAAAAMAAIAAAABAAEAAAANAAIAAAABAAEAAAAOAAIAAAABAAEAAAAPAAIAAAABAAEAAAAQAAIAAAABAAEAAAAQAAMAAAABAAEAAAAPAAMAAAABAAEAAAAOAAMAAAABAAEAAAANAAMAAAABAAEAAAAMAAMAAAABAAEAAAALAAMAAAABAAEAAAAKAAMAAAABAAEAAAAJAAMAAAABAAEAAAAIAAMAAAABAAEAAAAHAAMAAAABAAEAAAAFAAQAAAABAAEAAAAGAAQAAAABAAEAAAAHAAQAAAABAAEAAAAIAAQAAAABAAEAAAAJAAQAAAABAAEAAAAKAAQAAAABAAEAAAALAAQAAAABAAEAAAAMAAQAAAABAAEAAAANAAQAAAABAAEAAAAOAAQAAAABAAEAAAAPAAQAAAABAAEAAAAQAAQAAAABAAEAAAARAAQAAAABAAEAAAASAAQAAAABAAEAAAATAAQAAAABAAEAAAAUAAQAAAABAAEAAAAVAAQAAAABAAEAAAAWAAQAAAABAAEAAAAXAAQAAAABAAEAAAAYAAQAAAABAAEAAAAZAAQAAAABAAEAAAAaAAQAAAABAAEAAAAZAAMAAAABAAEAAAAYAAMAAAABAAEAAAAXAAMAAAABAAEAAAAWAAMAAAABAAEAAAAVAAMAAAABAAEAAAAUAAMAAAABAAEAAAATAAMAAAABAAEAAAASAAMAAAABAAEAAAARAAMAAAABAAEAAAATAAUAAAABAAEAAAAUAAUAAAABAAEAAAAVAAUAAAABAAEAAAAWAAUAAAABAAEAAAAXAAUAAAABAAEAAAAYAAUAAAABAAEAAAAZAAUAAAABAAEAAAAaAAUAAAABAAEAAAAbAAUAAAABAAEAAAASAAUAAAABAAEAAAARAAUAAAABAAEAAAAQAAUAAAABAAEAAAAPAAUAAAABAAEAAAAOAAUAAAABAAEAAAANAAUAAAABAAEAAAAMAAUAAAABAAEAAAALAAUAAAABAAEAAAAKAAUAAAABAAEAAAAJAAUAAAABAAEAAAAIAAUAAAABAAEAAAAHAAUAAAABAAEAAAAGAAUAAAABAAEAAAAFAAUAAAABAAEAAAA=")
tile_set = ExtResource("1_i47e5")

[node name="ButtonOn" type="TileMapLayer" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
tile_map_data = PackedByteArray("AAAAAAAAAAAFAAEAAAABAAAAAAAGAAEAAAACAAAAAAAGAAEAAAADAAAAAAAGAAEAAAAEAAAAAAAGAAEAAAAFAAAAAAAGAAEAAAAGAAAAAAAGAAEAAAAHAAAAAAAGAAEAAAAIAAAAAAAGAAEAAAAJAAAAAAAGAAEAAAAKAAAAAAAGAAEAAAALAAAAAAAGAAEAAAAMAAAAAAAGAAEAAAANAAAAAAAGAAEAAAAOAAAAAAAGAAEAAAAPAAAAAAAGAAEAAAAQAAAAAAAGAAEAAAARAAAAAAAGAAEAAAASAAAAAAAGAAEAAAATAAAAAAAGAAEAAAAUAAAAAAAGAAEAAAAVAAAAAAAGAAEAAAAWAAAAAAAGAAEAAAAXAAAAAAAGAAEAAAAYAAAAAAAGAAEAAAAZAAAAAAAGAAEAAAAaAAAAAAAGAAEAAAAdAAAAAAAHAAEAAAAcAAAAAAAGAAEAAAAbAAAAAAAGAAEAAAAdAAEAAAAHAAEAAAAdAAIAAAAHAAEAAAAdAAMAAAAHAAEAAAAdAAQAAAAHAAEAAAAdAAUAAAAHAAEAAAAdAAYAAAAHAAIAAAAdAAcAAAAHAAMAAAAcAAcAAAAGAAMAAAAbAAcAAAAGAAMAAAAaAAcAAAAGAAMAAAAZAAcAAAAGAAMAAAAYAAcAAAAGAAMAAAAXAAcAAAAGAAMAAAAWAAcAAAAGAAMAAAAVAAcAAAAGAAMAAAAUAAcAAAAGAAMAAAATAAcAAAAGAAMAAAASAAcAAAAGAAMAAAARAAcAAAAGAAMAAAAQAAcAAAAGAAMAAAAPAAcAAAAGAAMAAAAOAAcAAAAGAAMAAAANAAcAAAAGAAMAAAAMAAcAAAAGAAMAAAALAAcAAAAGAAMAAAAKAAcAAAAGAAMAAAAJAAcAAAAGAAMAAAAIAAcAAAAGAAMAAAAHAAcAAAAGAAMAAAAGAAcAAAAGAAMAAAAFAAcAAAAGAAMAAAAEAAcAAAAGAAMAAAADAAcAAAAGAAMAAAACAAcAAAAGAAMAAAABAAcAAAAGAAMAAAAAAAcAAAAFAAMAAAAAAAYAAAAFAAIAAAAAAAUAAAAFAAEAAAAAAAQAAAAFAAEAAAAAAAMAAAAFAAEAAAAAAAIAAAAFAAEAAAAAAAEAAAAFAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAEAAAAKAAEAAAABAAEAAAALAAEAAAABAAEAAAAMAAEAAAABAAEAAAANAAEAAAABAAEAAAAOAAEAAAABAAEAAAAPAAEAAAABAAEAAAAQAAEAAAABAAEAAAARAAIAAAABAAEAAAASAAIAAAABAAEAAAATAAIAAAABAAEAAAAUAAIAAAABAAEAAAAVAAIAAAABAAEAAAAWAAIAAAABAAEAAAAXAAIAAAABAAEAAAAYAAIAAAABAAEAAAAZAAIAAAABAAEAAAAaAAIAAAABAAEAAAAbAAIAAAABAAEAAAAcAAIAAAABAAEAAAAcAAEAAAABAAEAAAAbAAEAAAABAAEAAAAaAAEAAAABAAEAAAAZAAEAAAABAAEAAAAYAAEAAAABAAEAAAAXAAEAAAABAAEAAAAWAAEAAAABAAEAAAAVAAEAAAABAAEAAAAUAAEAAAABAAEAAAATAAEAAAABAAEAAAASAAEAAAABAAEAAAARAAEAAAABAAEAAAAaAAMAAAABAAEAAAAbAAMAAAABAAEAAAAbAAQAAAABAAEAAAAcAAQAAAABAAEAAAAcAAUAAAABAAEAAAAcAAMAAAABAAEAAAAcAAYAAAAGAAIAAAAbAAYAAAAGAAIAAAAaAAYAAAAGAAIAAAAZAAYAAAAGAAIAAAAYAAYAAAAGAAIAAAAXAAYAAAAGAAIAAAAWAAYAAAAGAAIAAAAVAAYAAAAGAAIAAAAUAAYAAAAGAAIAAAATAAYAAAAGAAIAAAASAAYAAAAGAAIAAAARAAYAAAAGAAIAAAAQAAYAAAAGAAIAAAAPAAYAAAAGAAIAAAAOAAYAAAAGAAIAAAANAAYAAAAGAAIAAAAMAAYAAAAGAAIAAAALAAYAAAAGAAIAAAAKAAYAAAAGAAIAAAAJAAYAAAAGAAIAAAAIAAYAAAAGAAIAAAAHAAYAAAAGAAIAAAAGAAYAAAAGAAIAAAAFAAYAAAAGAAIAAAAEAAYAAAAGAAIAAAADAAYAAAAGAAIAAAACAAYAAAAGAAIAAAABAAYAAAAGAAIAAAABAAUAAAABAAEAAAABAAQAAAABAAEAAAABAAMAAAABAAEAAAABAAIAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAMAAAABAAEAAAACAAIAAAABAAEAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAAEAAMAAAABAAEAAAAEAAIAAAABAAEAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAGAAMAAAABAAEAAAAGAAIAAAABAAEAAAAHAAIAAAABAAEAAAAIAAIAAAABAAEAAAAJAAIAAAABAAEAAAAKAAIAAAABAAEAAAALAAIAAAABAAEAAAAMAAIAAAABAAEAAAANAAIAAAABAAEAAAAOAAIAAAABAAEAAAAPAAIAAAABAAEAAAAQAAIAAAABAAEAAAAQAAMAAAABAAEAAAAPAAMAAAABAAEAAAAOAAMAAAABAAEAAAANAAMAAAABAAEAAAAMAAMAAAABAAEAAAALAAMAAAABAAEAAAAKAAMAAAABAAEAAAAJAAMAAAABAAEAAAAIAAMAAAABAAEAAAAHAAMAAAABAAEAAAAFAAQAAAABAAEAAAAGAAQAAAABAAEAAAAHAAQAAAABAAEAAAAIAAQAAAABAAEAAAAJAAQAAAABAAEAAAAKAAQAAAABAAEAAAALAAQAAAABAAEAAAAMAAQAAAABAAEAAAANAAQAAAABAAEAAAAOAAQAAAABAAEAAAAPAAQAAAABAAEAAAAQAAQAAAABAAEAAAARAAQAAAABAAEAAAASAAQAAAABAAEAAAATAAQAAAABAAEAAAAUAAQAAAABAAEAAAAVAAQAAAABAAEAAAAWAAQAAAABAAEAAAAXAAQAAAABAAEAAAAYAAQAAAABAAEAAAAZAAQAAAABAAEAAAAaAAQAAAABAAEAAAAZAAMAAAABAAEAAAAYAAMAAAABAAEAAAAXAAMAAAABAAEAAAAWAAMAAAABAAEAAAAVAAMAAAABAAEAAAAUAAMAAAABAAEAAAATAAMAAAABAAEAAAASAAMAAAABAAEAAAARAAMAAAABAAEAAAATAAUAAAABAAEAAAAUAAUAAAABAAEAAAAVAAUAAAABAAEAAAAWAAUAAAABAAEAAAAXAAUAAAABAAEAAAAYAAUAAAABAAEAAAAZAAUAAAABAAEAAAAaAAUAAAABAAEAAAAbAAUAAAABAAEAAAASAAUAAAABAAEAAAARAAUAAAABAAEAAAAQAAUAAAABAAEAAAAPAAUAAAABAAEAAAAOAAUAAAABAAEAAAANAAUAAAABAAEAAAAMAAUAAAABAAEAAAALAAUAAAABAAEAAAAKAAUAAAABAAEAAAAJAAUAAAABAAEAAAAIAAUAAAABAAEAAAAHAAUAAAABAAEAAAAGAAUAAAABAAEAAAAFAAUAAAABAAEAAAAAAP//AAAFAAAAAAABAP//AAAGAAAAAAACAP//AAAGAAAAAAADAP//AAAGAAAAAAAEAP//AAAGAAAAAAAFAP//AAAGAAAAAAAGAP//AAAGAAAAAAAHAP//AAAGAAAAAAAIAP//AAAGAAAAAAAJAP//AAAGAAAAAAAKAP//AAAGAAAAAAALAP//AAAGAAAAAAAMAP//AAAGAAAAAAANAP//AAAGAAAAAAAOAP//AAAGAAAAAAAPAP//AAAGAAAAAAAQAP//AAAGAAAAAAARAP//AAAGAAAAAAASAP//AAAGAAAAAAATAP//AAAGAAAAAAAUAP//AAAGAAAAAAAVAP//AAAGAAAAAAAWAP//AAAGAAAAAAAXAP//AAAGAAAAAAAYAP//AAAGAAAAAAAZAP//AAAGAAAAAAAaAP//AAAGAAAAAAAbAP//AAAGAAAAAAAcAP//AAAGAAAAAAAdAP//AAAHAAAAAAA=")
tile_set = ExtResource("1_i47e5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(240, 64)
shape = SubResource("RectangleShape2D_qejlp")

[node name="Label" type="Label" parent="."]
offset_right = 480.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("4_rra67")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
